--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <script src="https://use.fontawesome.com/9cdb9c28f9.js"></script>
+    <!-- <script src="https://use.fontawesome.com/9cdb9c28f9.js"></script> -->
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -41,5 +41,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+      <script src="https://use.fontawesome.com/9cdb9c28f9.js"></script>
   </body>
 </html>
